--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -7,8 +7,10 @@ $second-color: #00ACEC;
 
 $txt-main-color: #000;
 $txt-second-color: #8b6060;
+$txt-third-color:#555555;
 $txt-white: #fff;
 $txt-gray :#BDC3CA;
+
 
 $boder-radius : 5px;
 
