--- a/src/App.scss
+++ b/src/App.scss
@@ -63,7 +63,12 @@ button {
   margin-bottom: 10px;
   margin-top: -10px;
 }
-
+.modal-content {
+  margin: auto;
+  @include mobile {
+    width: 200px;
+  }
+}
 .modal-mess {
   margin-bottom: 10px;
   font-size: 1.1rem;
