--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -1,6 +1,37 @@
 @use "../../scss/" as *;
 
-.seat-container {
-  
+.head-content {
+  border-bottom: 1px solid $txt-gray;
+  position: relative;
+  padding-bottom: 15px;
+
+  &__line {
+    bottom: -2px;
+    position: absolute;
+    height: 3px;
+    width: 70px;
+    background-color: $main-color;
+  }
 }
 
+.categoryBg {
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+}
+
+.body-content {
+  display: flex;
+  align-items: center;
+
+  &__icon {
+    vertical-align: baseline;
+  }
+  
+  &__link {
+    margin-left: 10px;
+    font-size: 1.4rem;
+    font-weight: 500;
+    color: $txt-third-color;
+  }
+}
