--- a/src/components/SeatList/SeatList.scss
+++ b/src/components/SeatList/SeatList.scss
@@ -36,7 +36,7 @@
   cursor: pointer;
 
   &.activeSeat {
-    background-color: #008000 !important;
+    background-color: #008000 ;
     color: $txt-white ;
     border: 1px solid #008000;
   }
