--- a/src/layouts/DefaultLayout/DefaultLayout.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.scss
@@ -1,3 +1,6 @@
 .view {
-    height: 100vh;
+    height: 100%;
+    min-height: calc(100vh - 25px);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
