--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -23,11 +23,11 @@
 .body-content {
   display: flex;
   align-items: center;
-
+  justify-content: start;
   &__icon {
     vertical-align: baseline;
   }
-  
+
   &__link {
     margin-left: 10px;
     font-size: 1.4rem;
