--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,17 +1,20 @@
-@use '../../scss/' as *;
+@use "../../scss/" as *;
 
 .form-container {
-    h2 {
-        margin-bottom: 30px;
+  h2 {
+    margin-bottom: 30px;
+  }
+  padding: 50px;
+  &__main {
+    @include mobile-tablet {
+      min-width: 50vw;
     }
-    padding: 50px;
-    &__main {
-        width: 550px;
-        margin: auto;
-        padding: 25px;
-        background-color: $third-bg;
-    }
-    .register:hover > * {
-        color: $txt-white;
-    }
+    min-width: 550px;
+    margin: auto;
+    padding: 25px;
+    background-color: $third-bg;
+  }
+  .register:hover > * {
+    color: $txt-white;
+  }
 }
