--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,20 +1,18 @@
 $main-bg: #fff;
-$second-bg:#3a454b;
-$third-bg:#EEEEEE;
-$main-color: #1C57A5;
-$second-color: #00ACEC;
-
+$second-bg: #3a454b;
+$third-bg: #eeeeee;
+$main-color: #1c57a5;
+$second-color: #00acec;
 
 $txt-main-color: #000;
 $txt-second-color: #8b6060;
-$txt-third-color:#555555;
+$txt-third-color: #555555;
 $txt-white: #fff;
-$txt-gray :#BDC3CA;
+$txt-gray: #bdc3ca;
 
+$boder-radius: 5px;
 
-$boder-radius : 5px;
-
-$nav-height : 50px;
+$nav-height: 50px;
 
 $box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 
@@ -23,5 +21,3 @@ $mobile-tablet-width: 800px;
 
 $tablet-width: 1024px;
 $tablet-desktop-width: 1424px;
-
-
