--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -254,3 +254,14 @@
 .ant-select-selection-placeholder {
   color: $txt-white !important;
 }
+.ant-dropdown .ant-dropdown-menu {
+  right: 175px;
+  top: -20px;
+  border-radius: 0;
+  @include mobile-tablet {
+    right: 110px;
+  }
+  @include tablet {
+    right: 110px;
+  }
+}
