--- a/src/pages/Auth/Login/Login.scss
+++ b/src/pages/Auth/Login/Login.scss
@@ -1,4 +1,4 @@
-@use "../../scss/" as *;
+@use "../../../scss/" as *;
 
 .form-container {
   h2 {
@@ -10,19 +10,29 @@
       min-width: 50vw;
     }
     min-width: 550px;
+    max-width: 550px;
     margin: auto;
     padding: 25px;
     background-color: $third-bg;
   }
   .register {
-    color: black !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 42px;
     width: 210px;
     box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.25);
+    background-color: #1c57a5;
+    border: #1c57a5 solid 1px;
+    border-radius: 5px;
+    a {
+      width: 100%;
+      text-align: center;
+    }
   }
   .register:hover {
-    background-color: #4285f4;
-    box-shadow: 0 0 6px #1669f2;
+    background-color: #1c57a5;
+    box-shadow: 0 0 6px #1c57a5;
   }
   .register:hover > * {
     color: $txt-white;
